# LAB3.2

./: AddStudentDialog.cpp  AddStudentDialog.h  AllSort.h  BinaryInsertionSort.h  BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  CountingSort.h  FileFunc.h  GUI.cpp  GUI.h  HeapSort.h  InsertionSort.h  MergeSort.h  QuadraticSort.h  QuickSort.h  README.md  SelectionSort.h  ShekerSort.cpp  ShekerSort.h  ShellSort.h  Student.cpp  Student.h  StudentGUI.h  Test.cpp  Test.h  TreeSort.cpp  TreeSort.h  data.txt  main.cpp  notes.txt  testSortsOnLargeData.h
Pointers/: SharedPtr.h  WeakPtr.h
Sequence/: DynamicArray.h  LinkedList.h  MutableArraySequence.h  MutableListSequence.h  MutableSequence.h  Sequence.h
Sort/: BinaryInsertionSort.h  BubbleSort.h  HeapSort.h  ISorter.h  InsertionSort.h  MergeSort.h  QuickSort.h  SelectionSort.h  ShakerSort.h  ShellSort.h
